@@ -214,6 +214,10 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="..\..\src\lib\GreatWksBMParser.cxx">
+      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
     <ClCompile Include="..\..\src\lib\GreatWksSSParser.cxx">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -554,6 +558,7 @@
     <ClInclude Include="..\..\src\lib\FullWrtText.hxx" />
     <ClInclude Include="..\..\src\lib\GreatWksGraph.hxx" />
     <ClInclude Include="..\..\src\lib\GreatWksParser.hxx" />
+    <ClInclude Include="..\..\src\lib\GreatWksBMParser.hxx" />
     <ClInclude Include="..\..\src\lib\GreatWksSSParser.hxx" />
     <ClInclude Include="..\..\src\lib\GreatWksText.hxx" />
     <ClInclude Include="..\..\src\lib\HanMacWrdJGraph.hxx" />
