@@ -1,0 +1,98 @@
+/* -*- Mode: C++; c-default-style: "k&r"; indent-tabs-mode: nil; tab-width: 2; c-basic-offset: 2 -*- */
+
+/* libmwaw
+* Version: MPL 2.0 / LGPLv2+
+*
+* The contents of this file are subject to the Mozilla Public License Version
+* 2.0 (the "License"); you may not use this file except in compliance with
+* the License or as specified alternatively below. You may obtain a copy of
+* the License at http://www.mozilla.org/MPL/
+*
+* Software distributed under the License is distributed on an "AS IS" basis,
+* WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
+* for the specific language governing rights and limitations under the
+* License.
+*
+* Major Contributor(s):
+* Copyright (C) 2002 William Lachance (wrlach@gmail.com)
+* Copyright (C) 2002,2004 Marc Maurer (uwog@uwog.net)
+* Copyright (C) 2004-2006 Fridrich Strba (fridrich.strba@bluewin.ch)
+* Copyright (C) 2006, 2007 Andrew Ziem
+* Copyright (C) 2011, 2012 Alonso Laurent (alonso@loria.fr)
+*
+*
+* All Rights Reserved.
+*
+* For minor contributions see the git repository.
+*
+* Alternatively, the contents of this file may be used under the terms of
+* the GNU Lesser General Public License Version 2 or later (the "LGPLv2+"),
+* in which case the provisions of the LGPLv2+ are applicable
+* instead of those above.
+*/
+
+#ifndef GREAT_WKS_BM_PARSER
+#  define GREAT_WKS_BM_PARSER
+
+#include <string>
+#include <vector>
+
+#include <librevenge/librevenge.h>
+
+#include "MWAWDebug.hxx"
+#include "MWAWInputStream.hxx"
+
+#include "MWAWParser.hxx"
+
+namespace GreatWksBMParserInternal
+{
+struct State;
+}
+
+/** \brief the main class to read a GreatWorks paint file
+ *
+ * v1: specific structure
+ * v2: this is mainly a picture file with some application resources
+ */
+class GreatWksBMParser : public MWAWGraphicParser
+{
+public:
+  //! constructor
+  GreatWksBMParser(MWAWInputStreamPtr input, MWAWRSRCParserPtr rsrcParser, MWAWHeader *header);
+  //! destructor
+  virtual ~GreatWksBMParser();
+
+  //! checks if the document header is correct (or not)
+  bool checkHeader(MWAWHeader *header, bool strict=false);
+
+  // the main parse function
+  void parse(librevenge::RVNGDrawingInterface *documentInterface);
+
+protected:
+  //! inits all internal variables
+  void init();
+
+  //! creates the listener which will be associated to the document
+  void createDocument(librevenge::RVNGDrawingInterface *documentInterface);
+
+protected:
+  //! finds the different objects zones
+  bool createZones();
+
+  // Intermediate level
+
+  //! try to read a bitmap(v1): 576*720
+  bool readBitmap();
+  //! try to send the main picture
+  bool sendPicture();
+  //! try to send a bitmap(v1)
+  bool sendBitmap();
+
+  //
+  // data
+  //
+  //! the state
+  shared_ptr<GreatWksBMParserInternal::State> m_state;
+};
+#endif
+// vim: set filetype=cpp tabstop=2 shiftwidth=2 cindent autoindent smartindent noexpandtab:
